# OS

./: CMakeLists.txt
week01/: ex1.sh  ex2.sh  ex2.txt  ex3.sh
week01/home/: home.txt
week01/root/: root.txt
week02/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c
week03/: ex1.c  ex2.c  ex3.c  ex4.c
week04/: ex1  ex1.c  ex2  ex2.c  ex3.c  ex3.sh  ex3.txt  ex3.с  ex4  ex4.c  temp.txt
week05/: channel.c  ex1.sh  ex1.txt  ex2.c  ex2.sh  ex3.c  ex3.sh  ex3_exp.txt  ex3_res.txt  ex4.c  ex4.sh  ex4_exp.txt  ex4_res.txt  publisher.c  subscriber.c
week06/: agent.c  controller.c  ex2.sh  ex2.txt  ex3.sh  ex3.txt  ex4.sh  ex4.txt  scheduler.c  scheduler_rr.c  scheduler_sjf.c  worker.c
week07/: allocator.c  ex1.txt  ex2.c
week08/: ex1.c  ex1_hack.sh  ex2.sh  ex3.c  ex3.txt  mmu.c  mmu.txt  pager.c  pager.txt
week09/: ex1.sh  ex1.txt  ex2.sh  ex2.txt  mmu.c
week10/: ex1.c  ex1.sh  ex1.txt  ex21.sh  ex22.sh  ex23.sh  monitor.c
